# hands-on-rl

./: .gitignore  LICENSE.md  README.md  learning_materials.md
01_taxi/: README.md  pyproject.toml  requirements.txt  setup.py
01_taxi/notebooks/: 00_environment.ipynb  01_random_agent_baseline.ipynb  01_random_baseline.ipynb  02_q_agent.ipynb  02_q_agent_hyperparameters_analysis.ipynb  03_q_agent_hyperparameters_analysis.ipynb  04_homework.ipynb
01_taxi/src/: loops.py  q_agent.py  random_agent.py  train_loop.py
02_mountain_car/: README.md  pyproject.toml
02_mountain_car/notebooks/: 00_environment.ipynb  01_random_agent_baseline.ipynb  02_sarsa_agent.ipynb  03_momentum_agent_baseline.ipynb  04_homework.ipynb
02_mountain_car/src/: base_agent.py  config.py  loops.py  momentum_agent.py  random_agent.py  sarsa_agent.py  viz.py
03_cart_pole/: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
03_cart_pole/mlflow_runs/: readme.md
03_cart_pole/notebooks/: 00_environment.ipynb  01_random_agent_baseline.ipynb  02_linear_q_agent_bad_hyperparameters.ipynb  02_linear_q_agent_good_hyperparameters.ipynb  03_linear_q_agent_good_hyperparameters.ipynb  04_homework.ipynb  04_hyperparameter_optimization.ipynb  05_crash_course_on_neural_nets.ipynb  06_deep_q_agent.ipynb  06_deep_q_agent_bad_hyperparameters.ipynb  07_deep_q_agent_good_hyperparameters.ipynb  08_homework.ipynb  09_hyperparameter_search.ipynb  10_homework.ipynb  11_hyperparameter_search_in_google_colab.ipynb  11_train_deep_q_agent_in_google_colab.ipynb
03_cart_pole/saved_agents/: readme.md
03_cart_pole/src/: agent_memory.py  config.py  loops.py  model_factory.py  optimize_hyperparameters.py  q_agent.py  supervised_ml.py  utils.py  viz.py
03_cart_pole/tensorboard_logs/: .gitignore  readme.md
04_cart_pole_tune_hparams_like_a_pro/: README.md  pyproject.toml  requirements.txt  setup.py
04_cart_pole_tune_hparams_like_a_pro/notebooks/: 00_deep_q_agent_experimentation_with_neptune.ai.ipynb  00_deep_q_agent_experimentation_with_weights_and_biases.ipynb  01_deep_q_agent_hyperparameter_tuning_with_optuna_and_neptune.ai.ipynb  01_deep_q_agent_hyperparameter_tuning_with_optuna_and_weights_and_biases.ipynb
04_cart_pole_tune_hparams_like_a_pro/src/: config.py  loops.py  model_factory.py  optimize_hyperparameters.py  optimize_hyperparameters_shorter.py  q_agent.py  utils.py
04_lunar_lander/: README.md  pyproject.toml  requirements.txt
04_lunar_lander/notebooks/: 01_random_agent_baseline.ipynb  02_vanilla_policy_gradient_with_rewards_as_weights.ipynb  03_vanilla_policy_gradient_with_rewards_to_go_as_weights.ipynb  04_homework.ipynb
04_lunar_lander/saved_agents/: readme.md
04_lunar_lander/src/: viz.py  (+4 more)
(+296 files in other folders)
