[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Pau <plabartabajo@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
gym = "^0.21.0"
pyglet = "^1.5.21"
matplotlib = "^3.5.0"
tqdm = "^4.62.3"
pandas = "^1.3.4"
jupyter = "^1.0.0"
PyVirtualDisplay = "^2.2"
imageio = "^2.13.3"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
