[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Pau <plabartabajo@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.8"
gym = "^0.21.0"
sklearn = "^0.0"
numpy = "^1.21.4"
matplotlib = "^3.5.0"
jupyter = "^1.0.0"
tqdm = "^4.62.3"
torch = "^1.10.1"
tensorboard = "^2.7.0"
pandas = "^1.3.5"
PyYAML = "^6.0"
pyglet = "^1.5.21"
mlflow = "^1.22.0"
gdown = "^4.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
