[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Pau <plabartabajo@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.22.3"
torch = "^1.11.0"
scipy = "^1.8.0"
Box2D = "^2.3.10"
box2d-py = "^2.3.8"
gym = "0.17.2"
tensorboard = "^2.8.0"
tqdm = "^4.64.0"
jupyter = "^1.0.0"
matplotlib = "^3.5.1"
pandas = "^1.4.2"
pyglet = "1.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
